[package]
name = "nonvolatile"
version = "0.8.3"
authors = ["Jacob Sacco <jacobsacco@ou.edu>"]
edition = "2018"
description = "A package providing the ability to store configuration data out of the way"
repository = "https://github.com/jacobsacco/rs_nonvolatile"
license = "MIT"
readme = "README.md"
keywords = ["settings", "configuration", "storage", "store", "local"]
categories = ["config", "database", "filesystem"]

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[badges]
#maintenance = { status = "actively-developed" }

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
whoami = "0.5.3"
serde_yaml = "0.8.11"
generic_error = "0.2.0"
fs_util = "0.1.1"
sysinfo = "0.14.15"
rand = "0.7.3"
lazy_static = "1.4.0"
regex = "1.5.4"
